# catalyst

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  AUDIT.md  Progress.md  README.md  dev.sh  docker-compose.yml  install.sh  package.json  skills-lock.json
.githooks/: pre-push
.github/: dependabot.yml
catalyst-agent/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.toml  config.toml.example  setup-dev.sh
catalyst-agent/src/: config.rs  file_manager.rs  file_tunnel.rs  firewall_manager.rs  main.rs  network_manager.rs  runtime_manager.rs  storage_manager.rs  system_setup.rs  updater.rs  websocket_handler.rs
catalyst-auth-review/: FIXES_APPLIED.md
catalyst-backend/: .dockerignore  .env.example  .env.tunnel.example  Dockerfile  docker-entrypoint.sh  eslint.config.mjs  package.json  setup-dev.sh  setup.sh  tsconfig.json
catalyst-docker/: .env.example  README.md  docker-compose.caddy.yml  docker-compose.traefik.yml  docker-compose.yml
catalyst-frontend/: .env.example  .env.tunnel.example  .gitignore  Dockerfile  THEME_STANDARDIZATION_GUIDE.md  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
catalyst-shared/: package.json  types.ts
containerd/: catalyst-minio.service  catalyst-mysql.service  catalyst-postgres.service  catalyst-redis.service  catalyst-seaweedfs.service  compose-to-nerdctl.sh
docs/: API-DOCUMENTATION.md  API-QUICK-REFERENCE-AUTO.md  FEATURES.md  GETTING_STARTED.md  README.md  SECURITY.md  SECURITY_QUICK_REFERENCE.md  (+19 more)
(+486 files in other folders)
