[package]
name = "catalyst-agent"
version = "1.1.7"
edition = "2021"

[dependencies]
tokio = { version = "1.52", features = [
    "macros", "rt-multi-thread", "fs", "time", "sync",
    "process", "io-util", "signal", "net"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio-tungstenite = "0.29"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
uuid = { version = "1.23", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12"
sha2 = "0.11"
aes-gcm = "0.10"
rand_08 = { package = "rand", version = "0.8" }
base64 = "0.22"
sysinfo = "0.38"
nix = { version = "0.31", features = ["fs"] }
num_cpus = "1"
libc = "0.2"
reqwest = { version = "0.13", features = ["json", "stream", "rustls-native-certs"], default-features = false }
containerd-client = "0.9"
tonic = "0.14"
prost-types = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 0
codegen-units = 16
